# storage/openapi.yml
@@ -41,6 +41,13 @@ paths:
             type: string 
             format: date-time 
             example: 2016-08-29T09:12:33.001Z 
+        - name: end_timestamp 
+          in: query 
+          description: Limits the number of items on a page 
+          schema: 
+            type: string 
+            format: date-time 
+            example: 2016-08-29T09:12:33.001Z 
       responses: 
         '200': 
           description: Successfully returned a list of Age and gender events 
@@ -92,7 +99,14 @@ paths:
           schema: 
             type: string 
             format: date-time 
-            example: 2016-08-29T09:12:33.001Z 
+            example: 2016-08-29T09:12:33.001Z
+        - name: end_timestamp 
+          in: query 
+          description: Limits the number of items on a page 
+          schema: 
+            type: string 
+            format: date-time 
+            example: 2016-08-29T09:12:33.001Z  
       responses: 
         '200': 
           description: Successfully returned a list of Height and weight events 
